--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -4869,12 +4869,6 @@ li.feature-2 {
     height: 550px;
     margin: 0;
     padding: 0;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    z-index: -1
 }
 
 @media(max-width:560px) {
@@ -5835,7 +5829,7 @@ i.iconfont.down {
     }
 }
 @media(max-width:860px) {
-    #main-container {
+    /* #main-container {
         transition-duration: .5s;
         position: relative;
         overflow: hidden;
@@ -5857,8 +5851,39 @@ i.iconfont.down {
         position: fixed;
         right: 0;
         left: 0
+    } */
+    #main-container{
+        position: absolute;
+        margin-top: auto;
+        display: table;
+        width: 100%;
+        height: 100%!important;
+        max-height: 100vh;
+        text-align: center;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 3;
+        box-shadow: 0 1px 2px rgba(150,150,150,.7);
     }
-    
+    .swiper-container {
+        margin-top: auto;
+        display: table;
+        width: 100%;
+        height: 100%!important;
+        max-height: 100vh;
+        text-align: center;
+        overflow: hidden;
+        position: absolute !important;
+        top: 0;
+        left: 0;
+        z-index: -1 !important;
+        box-shadow: 0 1px 2px rgba(150,150,150,.7);
+    }
+    .swiper-slide{
+        width: 100% !important;
+    }
     .wrapper {
         transition-duration: .5s;
         width: 100%;
