--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -32,13 +32,19 @@
   <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
   <link rel="stylesheet" id="saukra_css-css" href="/css/style.css" type="text/css" media="all">
   <link rel="stylesheet" href="/css/lib.min.css" media="all">
-  <link rel="stylesheet" href="/css/font.css" media="all">
+  <!-- <link rel="stylesheet" href="/css/font.css" media="all"> -->
+  <link rel="stylesheet" href="/css/iconfont.css" media="all">
+  
   <link rel="stylesheet" href="/css/insight.css" media="all">
   <link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
   <link rel="stylesheet" href="/css/zoom.css" media="all">
   <link rel="stylesheet" type="text/css" href="/css/sharejs.css">
-  <link rel="stylesheet" type="text/css" href="/css/swiper.css">
+  <link rel="stylesheet" type="text/css" href="/css/swiper-bundle.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/myswiper.css">
+  <!-- 暂时不想重新写icon -->
+  <!-- <script src="/js/iconfont.js"></script> -->
   <script src="/js/swiper-bundle.min.js"></script>
+  <script type="text/javascript" src="/js/sakura-app.js"></script>
   <script>
     /*Initial Variables*/
     var mashiro_option = new Object();
@@ -153,10 +159,6 @@
 
     .comments .comments-hidden {
       display: none !important;
-    }
-
-    background-position:center center;
-    background-attachment:inherit;
     }
   </style>
 </head>
