--- a/themes/Sakura/layout/_partial/mheader.ejs
+++ b/themes/Sakura/layout/_partial/mheader.ejs
@@ -15,7 +15,7 @@
       <li>
         <a href="<%- url_for(theme.menus[menu].path) %>">
           <span class="faa-parent animated-hover">
-            <i class="fa  <%= theme.menus[menu].fa %>" aria-hidden="true"></i>
+            <i class="fa  <%= theme.menus[menu].fa %>" aria-hidden="true" target="__blank"></i>
             <%= menu %>
           </span>
         </a>
@@ -24,7 +24,7 @@
             <% for (var submenu in theme.menus[menu].submenus){ %>
               <li>
                 <a href="<%- url_for(theme.menus[menu].submenus[submenu].path) %>">
-                  <i class="fa <%= theme.menus[menu].submenus[submenu].fa %>" aria-hidden="true"></i>
+                  <i class="fa <%= theme.menus[menu].submenus[submenu].fa %>" aria-hidden="true" target="__blank"></i>
                   <%= submenu %>
                 </a>
               </li>
