首页，文字页头图优化，scroll美化

--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -55,7 +55,7 @@
      * 这样的设置仅是为了方便在基于PHP开发的主题中设置js变量，既然移植到了Node上，我想或许可以精简这一逻辑吧
      */
     mashiro_option.email_domain = "";
-    mashiro_option.email_name = "";
+    mashiro_option.email_name = "dummer";
     mashiro_option.cookie_version_control = "";
     mashiro_option.qzone_autocomplete = false;
     mashiro_option.site_name = "<%- theme.prefixName%><%- theme.siteName%>";
@@ -124,7 +124,7 @@
     }
 
     ::-webkit-scrollbar-thumb {
-      background: #FE9600
+      background: rgb(137, 140, 143)
     }
 
     .download,
