--- a/themes/Sakura/layout/_widget/common-page.ejs
+++ b/themes/Sakura/layout/_widget/common-page.ejs
@@ -11,7 +11,7 @@
     </div>
   <% } %>
   <div id="content" class="site-content">
-    <section class="author-profile">
+    <!-- <section class="author-profile">
       <div class="info" itemprop="author" itemscope="" itemtype="https://schema.org/Person">
         <a href="/about/" class="profile gravatar"><img src="<%- (theme.cdn || '') + theme.avatar%>" itemprop="image" alt="<%- theme.siteName %>" height="70" width="70"></a>
         <div class="meta">
@@ -23,7 +23,7 @@
       </div>
       <hr>
       <p><i class="iconfont icon-write"></i><%- theme.description%></p>
-    </section>
+    </section> -->
     <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
       <%- post.content %>
       <!-- .entry-content -->
