--- a/themes/Sakura/layout/links.ejs
+++ b/themes/Sakura/layout/links.ejs
@@ -16,19 +16,15 @@
     <p>
       请留言告诉我你的：<br>
       1、名字<br>
-      2、一句话介绍（熟人我会亲自帮写的）<br>
+      2、一句话介绍（可以置空）<br>
       3、主页地址<br>
-    4、头像（HTTPS*，可在评论区上传）</p>
+      4、头像（HTTPS，可在评论区上传）</p>
     <p>
       For Example：<br>
-      ★ Name: hojun<br>
-      ★ Bio: 好少年光芒万丈<br>
-      ★ URL: https://www.hojun.cn<br>
-      ★ Avatar: <a href="https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/custom/avatar.jpg" target="_blank" rel="nofollow">
-      获取嵌入代码</a>
+      ★ Name: dummerchen<br>
+      ★ URL: https://dummerchen.tk<br>
     </p>
     <p style="font-size: 13px">
-    ※ 为保证友链质量，今后新申请的友链将经过筛选，请在收到我的回复邮件后再于贵站添加本站链接。原则上过去已添加友链不会轻易删除，如遇死链、改变网站用途（友链主要针对的是同类的博客），将单独移至“阵亡将士”分类中，下次清理时未整改的将移除；如遇盗版、破解、网页植入挖矿脚本、极低质量内容、单方面移除本站链接，将直接移除，恕不另行通知。</p>
     <% if (page.links) { %>
       <div class="links">
         <% (page.links||[]).forEach(function (group, index) { %>
@@ -62,7 +58,7 @@
         <div class="social-share sharehidden share-component"></div>
         <i class="iconfont show-share icon-forward"></i>
       </div>
-    </footer><!-- .entry-footer -->
+    </footer>
   </article>
   <section class="author-profile">
     <div class="info" itemprop="author" itemscope="" itemtype="https://schema.org/Person">
@@ -77,40 +73,4 @@
     <hr>
     <p><i class="iconfont icon-write"></i><%- theme.description%></p>
   </section>
-<!--   <div class="have-toc">
-  </div>
-  <div class="toc-container" style="height: 4886.5px;">
-    <div class="toc">
-      <ol class="toc-list ">
-        <li class="toc-list-item">
-          <a href="#toc-head-1" class="toc-link node-name--H3  is-active-link">
-          1. 个人项目</a>
-        </li>
-        <li class="toc-list-item">
-          <a href="#toc-head-2" class="toc-link node-name--H3 ">
-          2. 私人服务</a>
-        </li>
-        <li class="toc-list-item">
-          <a href="#toc-head-3" class="toc-link node-name--H3 ">
-          3. 后宫佳丽</a>
-        </li>
-        <li class="toc-list-item">
-          <a href="#toc-head-4" class="toc-link node-name--H3 ">
-          4. 小伙伴们</a>
-        </li>
-        <li class="toc-list-item">
-          <a href="#toc-head-5" class="toc-link node-name--H3 ">
-          5. 阵亡将士</a>
-        </li>
-        <li class="toc-list-item">
-          <a href="#toc-head-6" class="toc-link node-name--H3 ">
-          6. 大佬博客</a>
-        </li>
-        <li class="toc-list-item">
-          <a href="#toc-head-7" class="toc-link node-name--H3 ">
-          7. 特别链接</a>
-        </li>
-      </ol>
-    </div>
-  </div> -->
 </div>
