修改头图和目录

--- a/themes/Sakura/layout/_partial/headertop.ejs
+++ b/themes/Sakura/layout/_partial/headertop.ejs
@@ -7,11 +7,11 @@
       </div>
     </div>
     <div class="focusinfo no-select">
-      <div class="header-tou">
+      <!-- <div class="header-tou">
         <a href="<%- theme.url%>">
           <img src="<%- theme.avatar %>">
         </a>
-      </div>
+      </div> -->
       <div class="header-info">
         <p><%= theme.description %></p>
         <div class="top-social_v2">
