--- a/themes/Sakura/layout/_partial/mheader.ejs
+++ b/themes/Sakura/layout/_partial/mheader.ejs
@@ -1,6 +1,8 @@
 <div id="mo-nav" class="">
   <div class="m-avatar">
-    <img src="<%- (theme.cdn || '') + theme.avatar%>">
+    <a href="<%- theme.url%>">
+      <img src="<%- (theme.cdn || '') + theme.avatar%>" >
+    </a>
   </div>
   <p style="text-align: center; color: #333; font-weight: 900; font-family: 'Ubuntu', sans-serif; letter-spacing: 1.5px"><%- theme.prefixName%><%- theme.siteName%></p>
   <p style="text-align: center; word-spacing: 20px;">
