--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -4876,7 +4876,7 @@ li.feature-2 {
     padding: 2px;
     border-radius: 100%
 }
-.focusinfo .header-tou img {
+/* .focusinfo .header-tou img {
     width: 130px;
     height: 130px;
     box-shadow: inset 0 0 10px #000;
@@ -4891,14 +4891,14 @@ li.feature-2 {
     -webkit-transition: all ease 1s;
     -moz-transition: all ease 1s;
     -o-transition: all ease 1s
-}
-.focusinfo .header-tou img:hover {
+} */
+/* .focusinfo .header-tou img:hover {
     transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
     -o-transform: rotate(360deg);
     -ms-transform: rotate(360deg)
-}
+} */
 .bio-text {
     position: relative;
     width: auto;
@@ -4975,7 +4975,7 @@ li.feature-2 {
     box-sizing: initial;
     white-space: nowrap
 }
-.header-info:before {
+/* .header-info:before {
     content: "";
     position: absolute;
     top: 127px;
@@ -4984,7 +4984,7 @@ li.feature-2 {
     border-width: 15px;
     border-style: solid;
     border-color: transparent transparent rgba(0, 0, 0, .5) transparent
-}
+} */
 .header-info p {
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
@@ -5746,9 +5746,6 @@ i.iconfont.down {
     #archives-temp {
         padding: 0 20px
     }
-    .headertop-down {
-        display: none
-    }
     #centerbg {
         height: 300px;
         background-attachment: scroll
@@ -5760,9 +5757,9 @@ i.iconfont.down {
     .header-info {
         width: 90% !important;
     }
-    .header-info:before {
+    /* .header-info:before {
         top: 98px !important;
-    }
+    } */
     .top-social_v2 li {
         margin-right: 0px !important;
         cursor: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/ayuda.cur), auto !important;
@@ -5802,9 +5799,6 @@ i.iconfont.down {
         transition: all .3s ease
     }
     
-    .wrapper section {
-        /*max-width:600px*/
-    }
     
     .wrapper section h1 {
         font-weight: 300;
@@ -5917,7 +5911,31 @@ i.iconfont.down {
         padding: 30px 0 20px;
         text-align: center
     }
-    
+    #mo-nav .m-avatar img {
+        width: 90px;
+        height: 90px;
+        max-width: 90px;
+        border-radius: 100%;
+        box-shadow: inset 0 0 10px #000;
+        padding: 5px;
+        opacity: 1;
+        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transition: all ease 1s;
+        -webkit-transition: all ease 1s;
+        -moz-transition: all ease 1s;
+        -o-transition: all ease 1s
+    } 
+    #mo-nav .m-avatar img:hover {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        -ms-transform: rotate(360deg)
+    }
     #mo-nav .m-avatar img {
         width: 90px;
         height: 90px;
