修复友链界面...

--- a/themes/Sakura/layout/links.ejs
+++ b/themes/Sakura/layout/links.ejs
@@ -12,18 +12,13 @@
 <div id="content" class="site-content">
   <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
     <p>
-    欢迎交换友链 ꉂ(ˊᗜˋ)</p>
+    欢迎大佬交换友链 ꉂ(ˊᗜˋ)</p>
     <p>
       请留言告诉我你的：<br>
       1、名字<br>
       2、一句话介绍（可以置空）<br>
       3、主页地址<br>
       4、头像（HTTPS，可在评论区上传）</p>
-    <p>
-      For Example：<br>
-      ★ Name: dummerchen<br>
-      ★ URL: https://dummerchen.tk<br>
-    </p>
     <p style="font-size: 13px">
     <% if (page.links) { %>
       <div class="links">
