--- a/themes/Sakura/layout/_partial/mheader.ejs
+++ b/themes/Sakura/layout/_partial/mheader.ejs
@@ -6,11 +6,11 @@
   </div>
   <p style="text-align: center; color: #333; font-weight: 900; font-family: 'Ubuntu', sans-serif; letter-spacing: 1.5px"><%- theme.prefixName%><%- theme.siteName%></p>
   <p style="text-align: center; word-spacing: 20px;">
-    <% if (theme.msocial) {%>
+    <!-- <% if (theme.msocial) {%>
       <% for (var i in theme.msocial) {%>
         <a href="<%- theme.msocial[i].url%>" class="fa <%- theme.msocial[i].fa%>" target="_blank" style="color: #<%- theme.msocial[i].color%>; margin-left: 20px"></a>
       <% } %>
-    <% } %>
+    <% } %> -->
   </p>
   <ul id="menu-new-1" class="menu">
     <% for (var menu in theme.menus){ %>
