--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -27,7 +27,7 @@
   <% } %>
   <meta http-equiv="x-dns-prefetch-control" content="on">
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Noto+SerifMerriweather|Merriweather+Sans|Source+Code+Pro|Ubuntu:400,700|Noto+Serif+SC"
+    href="https://cdn.jsdelivr.net/gh/dummerchen/MyCnblogsTheme@v1.0.0/src/style/google-fonts.min.css"
     media="all">
   <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
   <link rel="stylesheet" id="saukra_css-css" href="/css/style.css" type="text/css" media="all">
