--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -43,6 +43,9 @@
   <link rel="stylesheet" type="text/css" href="/css/myswiper.css">
   <!-- 暂时不想重新写icon -->
   <!-- <script src="/js/iconfont.js"></script> -->
+  <link href="https://cdn.jsdelivr.net/gh/dummerchen/MyCnblogsTheme@v1.0.0/src/style/highlightjs/monokai-sublime.min.css" rel="stylesheet" type="text/css">  <script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="highlightjs" src="https://cdn.jsdelivr.net/gh/dummerchen/MyCnblogsTheme@v1.0.0/src/script/lib/highlight.min.js"></script>  <script>
+      hljs.initHighlightingOnLoad();
+  </script>
   <script src="/js/jquery-2.1.0.min.js"></script>
   <script src="/js/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="/js/sakura-app.js"></script>
@@ -67,11 +70,6 @@
     mashiro_option.mathjax = "<%= theme.mathjax %>";
     mashiro_option.qq_api_url = "https://api.mashiro.top/qqinfo/";
     mashiro_option.qq_avatar_api_url = "https://api.mashiro.top/qqinfo/";
-
-  // mashiro_option.jsdelivr_css_src = "https://cdn.jsdelivr.net/gh/moezx/cdn@3.4.5/css/lib.min.css";
-  // mashiro_option.float_player_on = true;
-
-    /*End of Initial Variables*/
   </script>
 
   <script type="text/javascript">
