--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -43,10 +43,9 @@
   <link rel="stylesheet" type="text/css" href="/css/myswiper.css">
   <!-- 暂时不想重新写icon -->
   <!-- <script src="/js/iconfont.js"></script> -->
-  <link href="https://cdn.jsdelivr.net/gh/dummerchen/MyCnblogsTheme@v1.0.0/src/style/highlightjs/monokai-sublime.min.css" rel="stylesheet" type="text/css">  <script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="highlightjs" src="https://cdn.jsdelivr.net/gh/dummerchen/MyCnblogsTheme@v1.0.0/src/script/lib/highlight.min.js"></script>  <script>
-      hljs.initHighlightingOnLoad();
-  </script>
-  <script src="/js/jquery-2.1.0.min.js"></script>
+  <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">  
+  <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
+  <script >hljs.initHighlightingOnLoad();</script>   <script src="/js/jquery-2.1.0.min.js"></script>
   <script src="/js/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="/js/sakura-app.js"></script>
   <script>
