--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -8418,7 +8418,7 @@ a.toc-link {
     width:12px;
     height:12px;
     left:20px;
-    margin-top:-20px;
+    margin-top:-15px;
     -webkit-box-shadow:20px 0 #fdbc40,
     40px 0 #35cd4b;
     box-shadow:20px 0 #fdbc40,
@@ -8427,7 +8427,7 @@ a.toc-link {
 }
 .highlight-wrap {
     position: relative;
-    background: #21252b;
+    background: #21252b !important;
     border-radius: 5px;
     font: 15px/22px "Microsoft YaHei","Arial",Sans-Serif;
     line-height: 1.4;
@@ -8438,7 +8438,26 @@ a.toc-link {
     color: #000;
     padding-top: 30px;
     box-shadow: 0 10px 30px 0px rgba(0,0,0,.4);
-    max-height: 70vh;
+}
+code[class*="language-"], pre[class*="language-"] {
+    color: #f7f6f6 !important;
+    background: none;
+    text-shadow: none !important;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-size: 1em;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
 }
 .highlight .line span::-moz-selection,
 .line::-moz-selection {
@@ -8472,6 +8491,7 @@ a.toc-link {
     background-color:#21252b !important
 }
 .highlight-wrap code {
+    max-height: 70vh;
     background:#1d1f21;
     color:#fff;
     word-break:break-word;
