删除包含xx.map的字段

--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -29,7 +29,7 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/gh/dummerchen/MyCnblogsTheme@v1.0.0/src/style/google-fonts.min.css"
     media="all">
-  <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
+  <!-- <link rel="dns-prefetch" href="//cdn.jsdelivr.net"> -->
   <link rel="stylesheet" id="saukra_css-css" href="/css/style.css" type="text/css" media="all">
   <link rel="stylesheet" href="/css/lib.min.css" media="all">
   <!-- <link rel="stylesheet" href="/css/font.css" media="all"> -->
@@ -43,8 +43,8 @@
   <link rel="stylesheet" type="text/css" href="/css/myswiper.css">
   <!-- 暂时不想重新写icon -->
   <!-- <script src="/js/iconfont.js"></script> -->
-  <link href="https://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">  
-  <script src="https://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
+  <link rel="stylesheet" type="text/css" href="/css/monokai_sublime.min.css">  
+  <script src="/js/highlight.js"></script>  
   <script >hljs.initHighlightingOnLoad();</script>   <script src="/js/jquery-2.1.0.min.js"></script>
   <script src="/js/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="/js/sakura-app.js"></script>
