美化头图，math公式修复

--- a/themes/Sakura/layout/_partial/headertop.ejs
+++ b/themes/Sakura/layout/_partial/headertop.ejs
@@ -1,6 +1,6 @@
 <div class="headertop <%- theme.bgclass %>">
-  <div id="banner_wave_1"></div>
-  <div id="banner_wave_2"></div>
+  <!-- <div id="banner_wave_1"></div>
+  <div id="banner_wave_2"></div> -->
   <div id="centerbg">
     <div class="swiper-container">
       <div class="swiper-wrapper">
