--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -29,7 +29,7 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/gh/dummerchen/MyCnblogsTheme@v1.0.0/src/style/google-fonts.min.css"
     media="all">
-  <!-- <link rel="dns-prefetch" href="//cdn.jsdelivr.net"> -->
+  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
   <link rel="stylesheet" id="saukra_css-css" href="/css/style.css" type="text/css" media="all">
   <link rel="stylesheet" href="/css/lib.min.css" media="all">
   <!-- <link rel="stylesheet" href="/css/font.css" media="all"> -->
@@ -44,15 +44,17 @@
   <!-- 暂时不想重新写icon -->
   <!-- <script src="/js/iconfont.js"></script> -->
   <link rel="stylesheet" type="text/css" href="/css/monokai_sublime.min.css">  
+  
   <script src="/js/highlight.js"></script>  
-  <script >hljs.initHighlightingOnLoad();</script>   <script src="/js/jquery-2.1.0.min.js"></script>
+  <script >hljs.initHighlightingOnLoad();</script>   
+  <script src="/js/jquery-2.1.0.min.js"></script>
   <script src="/js/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="/js/sakura-app.js"></script>
   <script>
     /*Initial Variables*/
     var mashiro_option = new Object();
     var mashiro_global = new Object();
-    mashiro_option.NProgressON = true;
+    mashiro_option.NProgressON = false;
     /* 
      * 邮箱信息之类的东西可以填在这里，这些js变量基本都作用于sakura-app.js
      * 这样的设置仅是为了方便在基于PHP开发的主题中设置js变量，既然移植到了Node上，我想或许可以精简这一逻辑吧
@@ -69,6 +71,7 @@
     mashiro_option.mathjax = "<%= theme.mathjax %>";
     mashiro_option.qq_api_url = "https://api.mashiro.top/qqinfo/";
     mashiro_option.qq_avatar_api_url = "https://api.mashiro.top/qqinfo/";
+    myurl=['https://dummerfu.tk/','http://localhost:4000/','https://dummerchen.github.io/']
   </script>
 
   <script type="text/javascript">
