--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -44,7 +44,9 @@
   <!-- 暂时不想重新写icon -->
   <!-- <script src="/js/iconfont.js"></script> -->
   <link rel="stylesheet" type="text/css" href="/css/monokai_sublime.min.css">  
-  
+  <canvas class="fireworks" style="position: fixed; left: 0px; top: 0px; z-index: 9; pointer-events: none; width: 1440px; height: 451px;" width="2880" height="902"></canvas>
+  <script type="text/javascript" src="//cdn.bootcss.com/animejs/2.2.0/anime.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/dummerchen/MyCnblogsTheme@master/src/script/cursor.js"></script>
   <script src="/js/highlight.js"></script>  
   <script >hljs.initHighlightingOnLoad();</script>   
   <script src="/js/jquery-2.1.0.min.js"></script>
