--- a/themes/Sakura/layout/links.ejs
+++ b/themes/Sakura/layout/links.ejs
@@ -15,10 +15,9 @@
     欢迎大佬交换友链 ꉂ(ˊᗜˋ)</p>
     <p>
       请留言告诉我你的：<br>
-      1、名字<br>
-      2、一句话介绍（可以置空）<br>
-      3、主页地址<br>
-      4、头像（HTTPS，可在评论区上传）</p>
+      名字<br>
+      主页地址<br>
+      头像（HTTPS，可在评论区上传）</p>
     <p style="font-size: 13px">
     <% if (page.links) { %>
       <div class="links">
