删去番组，小改一波

--- a/themes/Sakura/layout/_partial/headertop.ejs
+++ b/themes/Sakura/layout/_partial/headertop.ejs
@@ -37,6 +37,7 @@
       </div>
     </div>
   </div>
+  <!-- md 这个还删不得 -->
   <div id="video-container" style="">
     <video style="object-fit: fill" id="bgvideo" class="video" video-name="" src="" width="auto" preload="auto">
     </video>
