--- a/themes/Sakura/layout/things.ejs
+++ b/themes/Sakura/layout/things.ejs
@@ -1,6 +1,6 @@
 <div class="pattern-center-blank">
 </div>
-<div class="pattern-center single-center ">
+<div class="pattern-center single-center <%- theme.bgclass %>">
   <div class="pattern-attachment-img">
     <img src="<%= page.photos %>" src="<%- theme.lazyloadImg %>" data-src="<%= page.photos %>" class="lazyload" onerror="imgError(this,3)" style="width: 100%; height: 100%; object-fit: cover; pointer-events: none;">
   </div>
@@ -11,15 +11,15 @@
     </span>
   </div>
   <header class="pattern-header single-header">
-    <h1 class="entry-title">友人帐</h1>
+    <h1 class="entry-title">大事件薄</h1>
   </header>
 </div>
 <div id="content" class="site-content">
   <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
     <p style="font-size: 13px">
-    <% if (page.links) { %>
+    <% if (page.things) { %>
       <div class="links">
-        <% (page.links||[]).forEach(function (group, index) { %>
+        <% (page.things||[]).forEach(function (group, index) { %>
           <h3 class="link-title"><span class="fake-title"><%- index + 1 %>. <%- group.group %></span></h3>
           <% if (group.desc) { %>
             <div class="link-description"><%- group.desc %></div>
@@ -27,7 +27,7 @@
           <ul class="link-items fontSmooth">
             <% (group.items||[]).forEach(function (item) { %>
               <li class="link-item">
-                <a class="link-item-inner effect-apollo" href="<%- item.url %>" title="<%- item.desc %>" target="_blank" rel="friend">
+                <a class="link-item-inner effect-apollo" title="<%- item.desc %>" rel="friend">
                   <img class="lazyload" onerror="imgError(this,1)" src="<%- theme.lazyloadImg%>" data-src="<%- item.img %>" src="<%- item.img %>">
                   <span class="sitename">
                   <%- item.name %></span>
@@ -52,17 +52,4 @@
       </div>
     </footer>
   </article>
-  <section class="author-profile">
-    <div class="info" itemprop="author" itemscope="" itemtype="https://schema.org/Person">
-      <a href="/about/" class="profile gravatar"><img src="<%- (theme.cdn || '') + theme.avatar%>" itemprop="image" alt="hojun" height="70" width="70"></a>
-      <div class="meta">
-        <span class="title">Author</span>
-        <h3 itemprop="name">
-        <a href="<%- theme.url%>" itemprop="url" rel="author"><%- config.author %></a>
-        </h3>
-      </div>
-    </div>
-    <hr>
-    <p><i class="iconfont icon-write"></i><%- theme.description%></p>
-  </section>
 </div>
